# sdlg

./: README.md  example-minimal.py  example.py  profile_results.prof  pyproject.toml  sdlg.code-workspace  sdlg.py  test.py
resources/: font.py  image.py  rect.py  time.py
sdlg/: __init__.py  _cache.py  _display.py  _draw.py  _key.py  event.py  time.py
sdlg/resources/: time.py
tests/: test_cache.py  test_events.py  test_time.py
